--- a/src/app/pages/cart/cart.component.css
+++ b/src/app/pages/cart/cart.component.css
@@ -3,3 +3,83 @@
   text-align: center;
   color: #555;
 }
+
+.cart-table {
+  width: 100%;
+  background-color: whitesmoke;
+  box-shadow: 2px 4px 10px 0 rgba(0, 0, 0, 0.1);
+  border: 20px solid whitesmoke;
+  border-radius: 10px;
+  border-collapse: separate;
+  border-spacing: 0;
+  overflow: hidden;
+}
+
+.cart-table th {
+  padding: 20px;
+}
+
+.cart-table tbody {
+  background-color: white;
+}
+
+.cart-table tbody td {
+  padding: 20px;
+}
+
+.cart-table tbody tr:first-child td:first-child {
+  border-top-left-radius: 10px;
+}
+
+.cart-table tbody tr:first-child td:last-child {
+  border-top-right-radius: 10px;
+}
+
+.cart-table tbody tr:last-child td:first-child {
+  border-bottom-left-radius: 10px;
+}
+
+.cart-table tbody tr:last-child td:last-child {
+  border-bottom-right-radius: 10px;
+}
+
+.qty-flex {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.btn {
+  padding: 0.5rem 1rem;
+  border-radius: 6px;
+  font-weight: 600;
+  cursor: pointer;
+  border: none;
+}
+
+.btn-primary {
+  background-color: #1abc9c;
+  color: white;
+
+  &:hover {
+    background-color: #16a085;
+  }
+}
+
+.btn-secondary {
+  background-color: #2c3e50;
+  color: white;
+
+  &:hover {
+    background-color: #1a252f;
+  }
+}
+
+.btn-grey {
+  background-color: whitesmoke;
+  color: white;
+
+  &:hover {
+    background-color: gainsboro;
+  }
+}
