--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -7,7 +7,7 @@
   <p><strong>Stock:</strong> {{ product.stock }}</p>
 
   <div class="button-group">
-    <button class="btn btn-primary">Add to Cart</button>
+    <button class="btn btn-primary" (click)="addToCart()">Add to Cart</button>
     <a routerLink="/products">
       <button class="btn btn-secondary">Back</button>
     </a>
