--- a/src/app/pages/cart/cart.component.css
+++ b/src/app/pages/cart/cart.component.css
@@ -1,5 +1,9 @@
 .cart-container {
   padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   color: #555;
 }
@@ -8,8 +12,8 @@
   width: 100%;
   background-color: whitesmoke;
   box-shadow: 2px 4px 10px 0 rgba(0, 0, 0, 0.1);
-  border: 20px solid whitesmoke;
-  border-radius: 10px;
+  border: 15px solid whitesmoke;
+  border-radius: 5px;
   border-collapse: separate;
   border-spacing: 0;
   overflow: hidden;
@@ -24,7 +28,15 @@
 }
 
 .cart-table tbody td {
-  padding: 20px;
+  padding: 15px;
+}
+
+.m-0 {
+  margin: 0 !important;
+}
+
+.m-10 {
+  margin: 10px;
 }
 
 .cart-table tbody tr:first-child td:first-child {
@@ -41,6 +53,12 @@
 
 .cart-table tbody tr:last-child td:last-child {
   border-bottom-right-radius: 10px;
+}
+
+.flex-end {
+  display: flex;
+  align-self: end;
+  justify-content: end;
 }
 
 .qty-flex {
@@ -75,11 +93,26 @@
   }
 }
 
+.btn-red {
+  background-color: darkred;
+  color: white;
+
+  &:hover {
+    background-color: rgb(98, 7, 7);
+  }
+}
+
 .btn-grey {
   background-color: whitesmoke;
   color: white;
 
   &:hover {
     background-color: gainsboro;
+  }
+
+  &:disabled {
+    background-color: grey;
+    cursor: not-allowed;
+    opacity: 0.5;
   }
 }
